--- a/src/app/pages/movies/movies.page.html
+++ b/src/app/pages/movies/movies.page.html
@@ -1,13 +1,22 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>movies</ion-title>
+
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">movies</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-card color="dark">
+    <ion-card-header>
+      <ion-card-title>
+        <ion-icon class="ion-margin-end" name="videocam"></ion-icon>
+        Movie List
+      </ion-card-title>
+    </ion-card-header>
+    <ion-list>
+      <ion-item button *ngFor="let movie of movies" [routerLink]="['/movies-details', movie.id]">
+        <ion-label>{{movie.title}}</ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-card>
+
 </ion-content>
