:lipstick: feat: movie Reorder

--- a/src/app/pages/movies-details/movies-details.page.html
+++ b/src/app/pages/movies-details/movies-details.page.html
@@ -4,14 +4,14 @@
   </ion-toolbar>
 </ion-header>
 
-
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
   </ion-header>
+
   <ion-accordion-group class="ion-margin" expand="inset">
     <ion-accordion value="first">
       <ion-item slot="header" color="dark">
-        <ion-label>Song Details</ion-label>
+        <ion-label>Movie Details</ion-label>
       </ion-item>
       <div class="ion-padding" slot="content">Director - {{movie.director}}</div>
       <div class="ion-padding" slot="content">Duration - {{movie.duration}}</div>
