--- a/src/app/pages/movies/movies.page.html
+++ b/src/app/pages/movies/movies.page.html
@@ -1,6 +1,16 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title></ion-title>
+  <ion-toolbar color="dark">
+    <ion-grid>
+      <ion-row>
+        <ion-col size="auto">
+          <ion-icon button [routerLink]="['/home']" name="arrow-back"></ion-icon>
+        </ion-col>
+        <ion-col>
+          <ion-label>Movie List Project</ion-label>
+        </ion-col>
+        <ion-col></ion-col>
+      </ion-row>
+    </ion-grid>
   </ion-toolbar>
 </ion-header>
 
@@ -8,10 +18,19 @@
   <ion-card color="dark">
     <ion-card-header>
       <ion-card-title>
-        <ion-icon class="ion-margin-end" name="videocam"></ion-icon>
-        Movie List
+        <ion-grid>
+          <ion-row>
+            <ion-col size="auto">
+              <ion-icon name="videocam"></ion-icon>
+            </ion-col>
+            <ion-col>
+              <ion-label>Movies</ion-label>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
       </ion-card-title>
     </ion-card-header>
+
     <ion-list>
       <ion-reorder-group [disabled]="false" (ionItemReorder)="handleReorder($any($event))">
         <ion-item button *ngFor="let movie of movies" [routerLink]="['/movies-details', movie.id]">
@@ -21,5 +40,4 @@
       </ion-reorder-group>
     </ion-list>
   </ion-card>
-
 </ion-content>
